force-app/main/default/objects/vlocity_cmt__AccountDiscountItem__c/vlocity_cmt__AccountDiscountItem__c.object-meta.xml
<CustomObject>
    <description>An item or category of items to which an account discount applies. Master-detail child object of Account Discount (AccountDiscount__c).</description>
    <label>Account Discount Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Discount Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>