force-app/main/default/objects/vlocity_cmt__AccountDiscountItem__c/fields/vlocity_cmt__CatalogCategoryId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog Category</label>
    <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
    <relationshipLabel>Account Discount Items (Category)</relationshipLabel>
    <relationshipName>AccountDiscountItemsCategory</relationshipName>
    <type>Lookup</type>
</CustomField>